--- a/site/index.html
+++ b/site/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Flappy Bird Landing Page</title>
-    <link rel="stylesheet" href="css/style.css">
-    <!--<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Flappy Bird Clone Landing Page</title>
+    <meta name="description" content="A brief description of your site">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+    <link rel="stylesheet" href="css/normalize.css">
     <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -22,20 +28,20 @@
         <h1>Most Addictive Game Ever Made!</h1>
     </header>
     <section class="intro">
-        <p>Flappy Bird is an online game you can play for free.</p>
+        <p>Flappy Bird is an online game you can play for free. Caution, it will take over your life!</p>
     </section>
     <section class="features">
         <ul>
             <li>
-                <img src="images/screenshot-1.jpg">
+                <img src="image-assets/flappy-tap.jpeg">
                 <h2>Tap!</h2>
             </li>
             <li>
-                <img src="images/screenshot-2.jpg">
+                <img src="image-assets/flappy-flap.jpeg">
                 <h2>Flap!</h2>
             </li>
             <li>
-                <img src="images/screenshot-3.jpg">
+                <img src="image-assets/flappy-die.jpg">
                 <h2>Die!</h2>
             </li>
         </ul>
