--- a/site/index.html
+++ b/site/index.html
@@ -11,63 +11,91 @@
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-    <link rel="stylesheet" href="css/normalize.css">
+    <link href='https://fonts.googleapis.com/css?family=Fontdiner+Swanky|Frijole|Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
     <link href="css/font-awesome.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li>
-                <a href="#">CONTACT</a>
+    <main class="page-wrap">
+        <header>
+            <nav class="navbar navbar-default" role="navigation">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                            <li><a href="">Home</a></li>
+
+                            <li><a href="">Away</a></li>
+
+                            <li><a href="">My page</a></li>
+
+                            <li><a href="">Contact</a></li>
+
+                            <li><a href="">Login</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <h1>Flappy Bird</h1>
+            <p>Most addictive game ever made!</p>
+        </header>
+        <section class="features">
+            <p>Flappy Bird is an online game you can play for free. Caution, it will take over your life!</p>
+            <ul>
+                <li>
+                    <img src="img/flappy-tap.png">
+                    <h2>TAP!</h2>
+                </li>
+                <!-- <li>
+                <img src="img/flappy-flap.png">
+                <h2>FLAP!</h2>
             </li>
-        </ul>
-    </nav>
-    <header>
-        <h1>Most Addictive Game Ever Made!</h1>
-    </header>
-    <section class="intro">
-        <p>Flappy Bird is an online game you can play for free. Caution, it will take over your life!</p>
-    </section>
-    <section class="features">
-        <ul>
             <li>
-                <img src="image-assets/flappy-tap.jpeg">
-                <h2>Tap!</h2>
-            </li>
-            <li>
-                <img src="image-assets/flappy-flap.jpeg">
-                <h2>Flap!</h2>
-            </li>
-            <li>
-                <img src="image-assets/flappy-die.jpg">
-                <h2>Die!</h2>
-            </li>
-        </ul>
-    </section>
-    <section class="call-to-action">
-        <a href="#">Play Now!</a>
-    </section>
-    <footer class="social">
+                <img src="img/flappy-die.jpg">
+                <h2>DIE!</h2>
+            </li>-->
+            </ul>
+        </section>
+        <section class="call-to-action">
+            <a href="#"><i class="fa fa-play-circle-o"></i></a>
+            <p>PLAY NOW</p>
+        </section>
+    </main>
+    <footer class="social site-footer">
+        <hr>
         <p>Share on social media!</p>
         <ul class="icons">
             <li>
-                <a href=""><i class="fa fa-facebook-square"></i></a>
+                <a href="#"><i class="fa fa-facebook-square"></i></a>
             </li>
 
             <li>
-                <a href=""><i class="fa fa-twitter-square"></i></a>
+                <a href="#"><i class="fa fa-twitter-square"></i></a>
             </li>
             <li>
-                <a href=""><i class="fa fa-instagram"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
             </li>
             <li>
-                <a href=""><i class="fa fa-google-plus-square"></i></a>
+                <a href="#"><i class="fa fa-google-plus-square"></i></a>
             </li>
         </ul>
         <p class="copy">© Lynsey Marie Teague</p>
     </footer>
+    <script src="js/jquery.js" type="text/javascript"></script>
+    <script src="js/bootstrap.js" type="text/javascript"></script>
 </body>
 
 </html>
