--- a/site/index.html
+++ b/site/index.html
@@ -36,15 +36,9 @@
 
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li><a href="">Home</a></li>
-
-                            <li><a href="">Away</a></li>
-
-                            <li><a href="">My page</a></li>
-
                             <li><a href="">Contact</a></li>
 
-                            <li><a href="">Login</a></li>
+                            <li><a href="">App Store</a></li>
                         </ul>
                     </div>
                 </div>
@@ -92,7 +86,6 @@
                 <a href="#"><i class="fa fa-google-plus-square"></i></a>
             </li>
         </ul>
-        <p class="copy">© Lynsey Marie Teague</p>
     </footer>
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/bootstrap.js" type="text/javascript"></script>
