--- a/site/index.html
+++ b/site/index.html
@@ -17,7 +17,8 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-theme.css">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css">-->
+    <link rel="stylesheet" href="css/sass-style.css">
 </head>
 
 <body>
