--- a/site/index.html
+++ b/site/index.html
@@ -11,14 +11,27 @@
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-    <link href='https://fonts.googleapis.com/css?family=Fontdiner+Swanky|Frijole|Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
-    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            border: 0;
+            font-size: 100%;
+            /*The box-sizing property is used to tell the browser what the sizing properties (width and height) should include border-box.*/
+            box-sizing: border-box;
+        }
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.css">
-    <!-- <link rel="stylesheet" href="css/style.css">-->
-    <link rel="stylesheet" href="css/sass-style.css">
+        html,
+        body {
+            height: 100%;
+        }
+
+        body {
+            text-align: center;
+            font-family: 'Open Sans Condensed', sans-serif;
+            font-size: 2rem;
+        }
+    </style>
 </head>
 
 <body>
@@ -90,6 +103,14 @@
     </footer>
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/bootstrap.js" type="text/javascript"></script>
+    <link href='https://fonts.googleapis.com/css?family=Fontdiner+Swanky|Frijole|Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.css">
+    <!-- <link rel="stylesheet" href="css/style.css">-->
+    <link rel="stylesheet" href="css/sass-style.css">
 </body>
 
 </html>
