--- a/site/index.html
+++ b/site/index.html
@@ -103,6 +103,9 @@
     </footer>
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/bootstrap.js" type="text/javascript"></script>
+    <script src="http://cdn.jsdelivr.net/velocity/1.2.2/velocity.min.js"></script>
+    <script src="//cdn.jsdelivr.net/velocity/1.2.3/velocity.ui.min.js"></script>
+    <script src="js/main.js" type="application/javascript"></script>
     <link href='https://fonts.googleapis.com/css?family=Fontdiner+Swanky|Frijole|Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
     <link href="css/font-awesome.min.css" rel="stylesheet">
 
