inline image solutions

--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@
 
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-
+    <script async src="js/picturefill.js"></script>
     <style>
         * {
             margin: 0;
@@ -64,7 +64,7 @@
             <p>Flappy Bird is an online game you can play for free. Caution, it will take over your life!</p>
             <ul>
                 <li>
-                    <img src="img/flappy-tap.png">
+                    <img alt="flappy-bird" src="img/flappy-tap-1x.png" srcset="img/flappy-tap-1x.png 1x, img/flappy-tap-2x.png 2x">
                     <h2>TAP!</h2>
                 </li>
                 <!-- <li>
